--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -25,5 +25,5 @@ jobs:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        python setup.py sdist
+        python3 -m build
         twine upload dist/*
