--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine        
+        pip install setuptools wheel twine build      
     - name: Build and publish to Pypi
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
