--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
 [tool.black]
-line-length = 110
+line-length = 88
 
 [tool.isort]
-line_length = 100
+line_length = 88
 profile = "black"
 multi_line_output = 3 
+
+[tool.ruff]
+line-length = 125
